// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots 🚀 Cleanup Components/Menu/MenuList/MenuList Examples menu type 1`] = `
Array [
  .c0 {
  font-size: 1.5rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 32px;
  color: #121212;
}

.c1 {
  font-family: Lato,Helvetica,Arial,sans-serif;
}

.c2.highlight-term {
  color: #121212 !important;
  background-color: #FFDFB1 !important;
}

<h5
    className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
    data-color="neutral.f06"
    data-variant="headline1"
  >
    MenuList type="
    <span
      className="MuiTypography-root c1 c2 highlight-term MuiTypography-noWrap"
      data-color="initial"
      data-variant="inherit"
      title="menu"
    >
      menu
    </span>
    "
  </h5>,
  .c2 {
  padding: 0;
  margin: 0 8px 0 0;
}

.c2.RcListItemText-multiline {
  margin: 4px 8px 4px 0px;
}

.c2.RcListItemText-inset {
  padding-left: 56px;
}

.c2 .RcListItemText-primary {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-text-decoration-line: inherit;
  text-decoration-line: inherit;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
}

.c2 .RcListItemText-secondary {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-text-decoration-line: inherit;
  text-decoration-line: inherit;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  color: #666666;
}

.c1 {
  outline: none;
  box-sizing: border-box;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  height: auto;
  min-height: 32px;
  min-width: 112px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c1 .RcMenuItem-gutters {
  padding-left: 16px;
  padding-right: 16px;
}

.c1.RcMenuItem-dense {
  padding-top: 4px;
  padding-bottom: 4px;
  min-height: auto;
  line-height: 22px;
  font-weight: 700;
}

.c1 .sc-oefIU {
  margin-right: 0;
}

.c1 .sc-oefIU > .sc-fXgAFM {
  margin-left: 4px;
  margin-right: 4px;
}

.c0 {
  overflow: auto;
}

.c0 .sc-lmgQde {
  margin: 8px 0px;
}

<ul
    className="MuiList-root c0 MuiList-padding"
    onKeyDown={[Function]}
    role="menu"
    tabIndex={-1}
  >
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root c1 MuiMenuItem-gutters RcMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      data-menuitem-id="menu-item-0"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="menuitem"
      tabIndex={-1}
    >
      <div
        className="MuiListItemText-root c2"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary RcListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          MenuItem 1
        </span>
      </div>
    </li>
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root c1 MuiMenuItem-gutters RcMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      data-menuitem-id="menu-item-0"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="menuitem"
      tabIndex={-1}
    >
      <div
        className="MuiListItemText-root c2"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary RcListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          MenuItem 2
        </span>
      </div>
    </li>
    <li
      aria-disabled={true}
      className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root c1 MuiMenuItem-gutters RcMenuItem-gutters MuiListItem-gutters Mui-disabled MuiListItem-button Mui-disabled"
      data-menuitem-id="menu-item-0"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="menuitem"
      tabIndex={-1}
    >
      <div
        className="MuiListItemText-root c2"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary RcListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          MenuItem 3 (disabled)
        </span>
      </div>
    </li>
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root c1 MuiMenuItem-gutters RcMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      data-menuitem-id="menu-item-0"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="menuitem"
      tabIndex={-1}
    >
      <div
        className="MuiListItemText-root c2"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary RcListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          MenuItem 4
        </span>
      </div>
    </li>
  </ul>,
]
`;

exports[`Storyshots 🚀 Cleanup Components/Menu/MenuList/MenuList Examples selectedMenu type 1`] = `
Array [
  .c0 {
  font-size: 1.5rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 32px;
  color: #121212;
}

.c1 {
  font-family: Lato,Helvetica,Arial,sans-serif;
}

.c2.highlight-term {
  color: #121212 !important;
  background-color: #FFDFB1 !important;
}

<h5
    className="MuiTypography-root c0 MuiTypography-paragraph MuiTypography-displayBlock"
    data-color="neutral.f06"
    data-variant="headline1"
  >
    MenuList type="
    <span
      className="MuiTypography-root c1 c2 highlight-term MuiTypography-noWrap"
      data-color="initial"
      data-variant="inherit"
      title="selectedMenu"
    >
      selectedMenu
    </span>
    "
  </h5>,
  .c2 {
  padding: 0;
  margin: 0 8px 0 0;
}

.c2.RcListItemText-multiline {
  margin: 4px 8px 4px 0px;
}

.c2.RcListItemText-inset {
  padding-left: 56px;
}

.c2 .RcListItemText-primary {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-text-decoration-line: inherit;
  text-decoration-line: inherit;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
}

.c2 .RcListItemText-secondary {
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  -webkit-text-decoration-line: inherit;
  text-decoration-line: inherit;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 16px;
  color: #666666;
}

.c1 {
  outline: none;
  box-sizing: border-box;
  font-size: 0.9375rem;
  font-weight: 400;
  font-family: Lato,Helvetica,Arial,sans-serif;
  line-height: 22px;
  color: #121212;
  height: auto;
  min-height: 32px;
  min-width: 112px;
  padding-top: 4px;
  padding-bottom: 4px;
}

.c1 .RcMenuItem-gutters {
  padding-left: 16px;
  padding-right: 16px;
}

.c1.RcMenuItem-dense {
  padding-top: 4px;
  padding-bottom: 4px;
  min-height: auto;
  line-height: 22px;
  font-weight: 700;
}

.c1 .sc-oefIU {
  margin-right: 0;
}

.c1 .sc-oefIU > .sc-fXgAFM {
  margin-left: 4px;
  margin-right: 4px;
}

.c0 {
  overflow: auto;
}

.c0 .sc-lmgQde {
  margin: 8px 0px;
}

<ul
    className="MuiList-root c0 MuiList-padding"
    onKeyDown={[Function]}
    role="menu"
    tabIndex={-1}
  >
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root c1 MuiMenuItem-gutters RcMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      data-menuitem-id="menu-item-0"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="menuitem"
      tabIndex={-1}
    >
      <div
        className="MuiListItemText-root c2"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary RcListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          MenuItem 1
        </span>
      </div>
    </li>
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root c1 Mui-selected MuiMenuItem-gutters RcMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
      data-menuitem-id="menu-item-0"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="menuitem"
      tabIndex={0}
    >
      <div
        className="MuiListItemText-root c2"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary RcListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          MenuItem 2 (selected)
        </span>
      </div>
    </li>
    <li
      aria-disabled={true}
      className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root c1 MuiMenuItem-gutters RcMenuItem-gutters MuiListItem-gutters Mui-disabled MuiListItem-button Mui-disabled"
      data-menuitem-id="menu-item-0"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="menuitem"
      tabIndex={-1}
    >
      <div
        className="MuiListItemText-root c2"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary RcListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          MenuItem 3 (disabled)
        </span>
      </div>
    </li>
    <li
      aria-disabled={false}
      className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root c1 MuiMenuItem-gutters RcMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      data-menuitem-id="menu-item-0"
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      role="menuitem"
      tabIndex={-1}
    >
      <div
        className="MuiListItemText-root c2"
      >
        <span
          className="MuiTypography-root MuiListItemText-primary RcListItemText-primary MuiTypography-body1 MuiTypography-displayBlock"
        >
          MenuItem 4
        </span>
      </div>
    </li>
  </ul>,
]
`;
